Absolute and random function added

--- a/calc.html
+++ b/calc.html
@@ -65,8 +65,8 @@
         <div class="row">
           <button onclick="ln()">ln</button>
           <button onclick="power()">10^X</button>
-          <button onclick="mod()">|X|</button>
-          <button onclick="xPowY()">X^Y</button>
+          <button onclick="absolute()">|X|</button>
+          <button onclick="random()">random</button>
           <button onclick="plusMinus()">+/-</button>
           <button id="eval" onclick="screen.value=eval(screen.value)">=</button>
         </div>
